--- a/.gitmodules
+++ b/.gitmodules
@@ -7,6 +7,9 @@
 [submodule "Husky/Vendor/Formatters/textile"]
 	path = Husky/Vendor/Formatters/textile
 	url = https://github.com/netcarver/textile.git
-[submodule "Husky/Vendor/yadif"]
-	path = Husky/Vendor/yadif
+[submodule "Husky/Vendor/Yadif"]
+	path = Husky/Vendor/Yadif
 	url = https://github.com/beberlei/yadif.git
+[submodule "Husky/Vendor/Twitter/bootstrap"]
+	path = Husky/Vendor/Twitter/bootstrap
+	url = https://github.com/twitter/bootstrap.git
