--- a/config/husky.yaml
+++ b/config/husky.yaml
@@ -21,4 +21,7 @@ production:
   # Path, relative to Husky's root folder, where the finished public files will be written to
   publicDirectory: public
 
+  # What criteria should the navigation be sorted on? date, filename
+  navigationOrder: date
+
 
